--- a/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
@@ -10,7 +10,7 @@
         {
             <MCol key="@item.FirstTitle" Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
                 <MCard Class="m-0 p-0" Outlined>
-                    <MImage Src="@(item.Cover ?? ConstDatas.DynamicImageApi)" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
+                    <MImage Src="@(item.Cover ?? ConstData.DynamicImageApi)" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
                         @if (!string.IsNullOrWhiteSpace(item.FirstTitle))
                         {
                             <MToolbarTitle Class="ml-0 mt-1 mb-1 pt-0 pb-0 pl-2 text-h6 white--text bg-black bg-opacity-25">
