add 404 page;add post search;

--- a/src/Dotnet9.Tools.Web/App.razor
+++ b/src/Dotnet9.Tools.Web/App.razor
@@ -7,7 +7,8 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(PublicLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <Dotnet9.Tools.Web.Shared.Public.NotFound/>
         </LayoutView>
     </NotFound>
+
 </Router>
