--- a/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
@@ -12,7 +12,7 @@
                         @if (!string.IsNullOrWhiteSpace(item.FirstTitle))
                         {
                             <MToolbarTitle Class="ml-0 mt-1 mb-1 pt-0 pb-0 pl-2 text-h6 white--text bg-black bg-opacity-25">
-                                <MButton Class="ma-2 white--text" Color="rgba(0,0,0,0.6);" Rounded Href="@item.FirstUrl">
+                                <MButton Class="ma-2 white--text text-capitalize" Color="rgba(0,0,0,0.6);" Rounded Href="@item.FirstUrl">
                                     @item.FirstTitle
                                 </MButton>
                             </MToolbarTitle>
@@ -22,7 +22,7 @@
                     <MCardActions>
                         @if (!string.IsNullOrWhiteSpace(item.SecondTitle))
                         {
-                            <MButton Color="black text-truncate" NoGutter Text Rounded Href="@item.SecondUrl">
+                            <MButton Color="black text-truncate text-capitalize" Small NoGutter Text Rounded Href="@item.SecondUrl">
                                 @item.SecondTitle
                             </MButton>
                         }
