--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicFooter.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicFooter.razor
@@ -3,7 +3,7 @@
 <MRow Justify="JustifyTypes.Center" NoGutters>
     @foreach (var link in _links)
     {
-        <MButton Color="white" Text Rounded Class="my-2" Target="_blank" Href="@link.Url">
+        <MButton Color="white" Text Rounded Class="my-2 text-capitalize" Target="_blank" Href="@link.Url">
             @link.Name
         </MButton>
     }
