--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -50,6 +50,7 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+<script src="js/site.js"></script>
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 <script>
