--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -50,46 +50,9 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
-<script src="js/site.js"></script>
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
-<script>
-
-    window.setCookie = function(name, value) {
-        document.cookie = `${name}=${escape(value.toString())};path=/;}`;
-    };
-    window.getCookie = function(name) {
-        const reg = new RegExp(`(^| )${name}=([^;]*)(;|$)`);
-        const arr = document.cookie.match(reg);
-        if (arr) {
-            return unescape(arr[2]);
-        }
-        return null;
-    };
-
-    async function downloadFileFromStream(fileName, contentStreamReference) {
-        const arrayBuffer = await contentStreamReference.arrayBuffer();
-        const blob = new Blob([arrayBuffer]);
-
-        const url = URL.createObjectURL(blob);
-
-        triggerFileDownload(fileName, url);
-
-        URL.revokeObjectURL(url);
-    }
-
-    function triggerFileDownload(fileName, url) {
-        const anchorElement = document.createElement('a');
-        anchorElement.href = url;
-
-        if (fileName) {
-            anchorElement.download = fileName;
-        }
-
-        anchorElement.click();
-        anchorElement.remove();
-    }
-</script>
+<script src="js/site.js"></script>
 <!--prism核心js (用于渲染代码块)-->
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/prism.min.js"></script>
 <!--显示代码块行号-->
@@ -105,6 +68,6 @@
 
 </body>
 </html>
-<div style="text-align: center">
+<div style="text-align: center" hidden>
     <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280900562'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280900562%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
