--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
@@ -23,8 +23,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _tools.Add(new CardItem(T("IcoToolTitle"), "/ico", T("IcoToolDesc"), "/ico", "doc/blog_contents/uploads/2022/02/cover_13.jpg"));
-        _tools.Add(new CardItem(T("TimestampToolTitle"), "/timestamp", T("TimestampToolDesc"), "/timestamp", "doc/blog_contents/uploads/2022/02/cover_17.jpeg"));
+        _tools.Add(new CardItem(T("IcoToolTitle"), "/ico", T("IcoToolDesc"), "/ico", "doc/blog_contents/uploads/2022/02/cover_13.jpg", author: T("SiteOwner"), originalLink: "/", date: "2022-02-22"));
+        _tools.Add(new CardItem(T("TimestampToolTitle"), "/timestamp", T("TimestampToolDesc"), "/timestamp", "doc/blog_contents/uploads/2022/02/cover_17.jpeg", author: T("SiteOwner"), originalLink: "/", date: "2022-02-28"));
 
         await base.OnInitializedAsync();
     }
