--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -68,6 +68,6 @@
 
 </body>
 </html>
-<div style="text-align: center" hidden>
+<div style="text-align: center">
     <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280900562'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280900562%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
