--- a/src/Dotnet9.Tools.Web/Pages/Public/Timelines.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Timelines.razor
@@ -20,7 +20,7 @@
                 </OppositeContent>
                 <ChildContent>
                     <MCard Color="@color" Dark>
-                        <MCardTitle Class="text-h6">@item.Title</MCardTitle>
+                        <p Class="pt-3 pl-4">@item.Title</p>
                         <MCardText Class="white text--primary">@item.Content</MCardText>
                     </MCard>
                 </ChildContent>
